Fixed z-index of nab button

--- a/css/hacks.css
+++ b/css/hacks.css
@@ -296,3 +296,7 @@ menu > .trigger > i {
 menu.open > .trigger > i {
   transform: rotate(-135deg);
 }
+
+.zi{
+  z-index: 999;
+}
